salesforce_sfdx/main/default/objects/Contract/fields/N_Documento__c.field-meta.xml
<CustomField>
    <fullName>N_Documento__c</fullName>
    <label>N° Documento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>