salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_Administrador_de_contrato_Cliente__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Administrador_de_contrato_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administrador de contrato Cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>