salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_Administrador_de_contrato_Engie__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Administrador_de_contrato_Engie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administrador de contrato Engie</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>