salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_Consumo_anual_de_gas__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Consumo_anual_de_gas__c</fullName>
    <label>Consumo anual de gas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>