salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_Consumo_Mensual_Combustible__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Consumo_Mensual_Combustible__c</fullName>
    <label>Consumo Mensual Combustible (Nm3GN)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>