salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_Contrato_inicial__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Contrato_inicial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrato inicial</label>
    <type>Checkbox</type>
</CustomField>