salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_Deliver_or_Pay__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Deliver_or_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliver or Pay</label>
    <type>Checkbox</type>
</CustomField>