salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_Indexacion__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Indexacion__c</fullName>
    <label>Indexación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brent</fullName>
            </value>
            <value>
                <fullName>Precio Paridad Diesel</fullName>
            </value>
            <value>
                <fullName>Precio Paridad GLP</fullName>
            </value>
            <value>
                <fullName>Precio Paridad Fuel Oil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>