salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_Oportunidad_relacionada__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Oportunidad_relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad relacionada</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>