salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Porcentaje__c</fullName>
    <label>Porcentaje</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>