salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_Potencia_ConvenidaMW__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Potencia_ConvenidaMW__c</fullName>
    <label>Potencia Convenida(MW)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>