salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_Proveedor_de_molecula__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Proveedor_de_molecula__c</fullName>
    <label>Proveedor de molécula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EECL (Mejillones)</fullName>
            </value>
            <value>
                <fullName>ENAP</fullName>
            </value>
            <value>
                <fullName>ENEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>