salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_Sujeto_a_auditoria__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Sujeto_a_auditoria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sujeto a auditoría</label>
    <type>Checkbox</type>
</CustomField>