salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_Tarifa_Engie__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Tarifa_Engie__c</fullName>
    <label>Tarifa Engie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>