salesforce_sfdx/main/default/objects/Contract/fields/OSFCL_URL_contrato__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_URL_contrato__c</fullName>
    <label>URL contrato</label>
    <type>Url</type>
</CustomField>