salesforce_sfdx/main/default/objects/Contract/fields/OSFMX_Amount__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Amount__c</fullName>
    <label>Monto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>