salesforce_sfdx/main/default/objects/Contract/fields/Tipo_de_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Contrato__c</fullName>
    <label>Tipo de Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eléctrico</fullName>
            </value>
            <value>
                <fullName>Telecomunicaciones</fullName>
            </value>
            <value>
                <fullName>Montaje</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>