salesforce_sfdx/main/default/objects/Contract/recordTypes/Contrato_Energia_Chile.recordType-meta.xml
<RecordType>
    <fullName>Contrato_Energia_Chile</fullName>
    <active>true</active>
    <label>Contrato Energía Chile</label>
</RecordType>