salesforce_sfdx/main/default/objects/Contract/recordTypes/Contrato_Energia_Colombia.recordType-meta.xml
<RecordType>
    <fullName>Contrato_Energia_Colombia</fullName>
    <active>true</active>
    <label>Contrato Energía Colombia</label>
</RecordType>