salesforce_sfdx/main/default/objects/Contract/recordTypes/Contrato_Gas_Chile.recordType-meta.xml
<RecordType>
    <fullName>Contrato_Gas_Chile</fullName>
    <active>true</active>
    <label>Contrato Gas Chile</label>
</RecordType>