salesforce_sfdx/main/default/objects/Contract/recordTypes/OSFPE_rt_contratoEnergiaPeru.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_contratoEnergiaPeru</fullName>
    <active>true</active>
    <label>Contrato Energía Perú</label>
</RecordType>