salesforce_sfdx/main/default/objects/Contract/recordTypes/OSFPE_rt_contratoSolucionesPeru.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_contratoSolucionesPeru</fullName>
    <active>true</active>
    <label>Contrato Soluciones Perú</label>
</RecordType>